<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhesActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxWidth="10px"
        android:maxHeight="20px"
        android:src="@drawable/ic_camera_black_24dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNome"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/lblNome"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/lblEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTelemovel"
        android:gravity="center"
        android:inputType="textPhonetic"
        android:hint="@string/lblTelefone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFoto"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/lblFoto"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_edit"
            />

        <ImageButton
            android:id="@+id/btApagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_delete"
            />

        <ImageButton
            android:id="@+id/btNovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_novo"
            />

        <ImageButton
            android:id="@+id/btTelefonar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_call"
            />

        <ImageButton
            android:id="@+id/btVoltardoDetalhe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_voltar"
            />

    </LinearLayout>
</LinearLayout>